@@ -347,6 +347,7 @@ world.gremlins = {
     'g_V_elementMap': [(lambda g:g.V().elementMap())], 
     'g_V_elementMapXname_ageX': [(lambda g:g.V().elementMap('name','age'))], 
     'g_EX11X_elementMap': [(lambda g, eid11=None:g.E(eid11).elementMap())], 
+    'g_V_elementMapXname_age_nullX': [(lambda g:g.V().elementMap('name','age',None))], 
     'g_V_asXaX_flatMapXselectXaXX': [(lambda g:g.V().as_('a').flatMap(__.select('a')))], 
     'g_V_fold': [(lambda g:g.V().fold())], 
     'g_V_fold_unfold': [(lambda g:g.V().fold().unfold())], 
@@ -500,6 +501,8 @@ world.gremlins = {
     'g_V_hasXageX_propertiesXnameX': [(lambda g:g.V().has('age').properties('name').value())], 
     'g_V_hasXageX_propertiesXname_ageX_value': [(lambda g:g.V().has('age').properties('name','age').value())], 
     'g_V_hasXageX_propertiesXage_nameX_value': [(lambda g:g.V().has('age').properties('age','name').value())], 
+    'g_V_propertiesXname_age_nullX_value': [(lambda g:g.V().properties('name','age',None).value())], 
+    'g_V_valuesXname_age_nullX': [(lambda g:g.V().values('name','age',None))], 
     'g_VX1X_asXaX_outXknowsX_asXbX_selectXa_bX': [(lambda g, vid1=None:g.V(vid1).as_('a').out('knows').as_('b').select('a','b'))], 
     'g_VX1X_asXaX_outXknowsX_asXbX_selectXa_bX_byXnameX': [(lambda g, vid1=None:g.V(vid1).as_('a').out('knows').as_('b').select('a','b').by('name'))], 
     'g_VX1X_asXaX_outXknowsX_asXbX_selectXaX': [(lambda g, vid1=None:g.V(vid1).as_('a').out('knows').as_('b').select('a'))], 
@@ -605,6 +608,7 @@ world.gremlins = {
     'g_V_hasLabelXpersonX_filterXoutEXcreatedXX_valueMapXtrueX': [(lambda g:g.V().hasLabel('person').filter(__.outE('created')).valueMap(True))], 
     'g_V_hasLabelXpersonX_filterXoutEXcreatedXX_valueMap_withXtokensX': [(lambda g:g.V().hasLabel('person').filter(__.outE('created')).valueMap().with_('~tinkerpop.valueMap.tokens'))], 
     'g_VX1X_valueMapXname_locationX_byXunfoldX_by': [(lambda g, vid1=None:g.V(vid1).valueMap('name','location').by(__.unfold()).by())], 
+    'g_V_valueMapXname_age_nullX': [(lambda g:g.V().valueMap('name','age',None))], 
     'g_VXlistX1_2_3XX_name': [(lambda g, xx1=None:g.V(xx1).name)], 
     'g_VXlistXv1_v2_v3XX_name': [(lambda g, xx1=None:g.V(xx1).name)], 
     'g_V': [(lambda g:g.V())], 
